<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="18dp"
            android:layout_weight="0.60"
            android:text="@string/selection"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/radioNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network" 
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioNetworkWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_wifi" />

        <RadioButton
            android:id="@+id/radioGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStart"
        android:layout_alignBottom="@+id/buttonStart"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/buttonStart"
        android:text="@string/stop" 
        android:onClick="stopRecording"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="60dp"
        android:text="@string/start" 
        android:onClick="startRecording"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStart"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_marginBottom="68dp"
        android:text="@string/currentLocation" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/noLocation" />

</RelativeLayout>